--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="anything.css">
   <link rel="shortcut icon" href="images/favicon .ico" type="image/x-icon">
-  <title>Anything</title>
+  <title>Eniola's personal website</title>
 </head>
 
 <body>
