--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
   </nav>
   <div class="container">
-    <h2>Oh Hi there, i'm Eniola, a web developer.</h2> <br>
+    <h2>Oh Hi there, i'm Eniola, a Front End Web developer.</h2> <br>
     <p>
       This is a random HTML & CSS project i decided to work on just for the fun of it.<br> And as you might have not  guessed it, it's
-      about my journey as a teenage Web developer or Programmer <br>
+      about my journey as a teenage Web developer<br>
       Well it all started during Lockdown in 2020,
     </p>
 
