--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
   </nav>
   <div class="container">
-    <h2>Oh Hi there, i'm Eniola, a Front End Web developer.</h2> <br>
+    <h2>Oh Hi there, i'm Eniola, a Frontend Web developer.</h2> <br>
     <p>
       This is a random HTML & CSS project i decided to work on just for the fun of it.<br> And as you might have not  guessed it, it's
-      about my journey as a teenage Web developer<br>
+      about my journey as a Frontend Web developer<br>
       Well it all started during Lockdown in 2020,
     </p>
 
@@ -62,16 +62,17 @@
     <hr>
     <h3>Coding Journey</h3>
     <p>In 2020,I started coding and learnt HTML and CSS</p>
-    <p>Then i Stopped coding due to lack of interest and passion</p>
+    <p>Then i Stopped coding due to lack of interest. The zeal to continue wasn't there</p>
+    <p>JavaScript was getting to me then, NodeJS to be precise, using the Comman Prompt was somewhat  mental</p>
     <p>I came back to coding on May 3rd 2022,took a Course on Python....and thankfully, i completed it on July 13th
       2022. That was my first
-      breakthrough in Coding: I started a course and saw the end of it and also got my very first Certificate of
+   breakthrough in Coding: I started a course and saw the end of it and also got my very first Certificate of
       Completion
     </p>
     <p> I decided to retake my very first HTML and CSS course from scratch again and God willing, i completed it after 2
       years &#128519;</p>
 
-    <p>On Completing it, i started another Web Development course on Udemy in October 2022: The Complete 2022 Web
+    <p>On Completing it, i started another Web Development course on Udemy in October 2022: The Complete Web
       Development Bootcamp</p>
 
     <p>In 2023, I look forward to achieving some of my coding dreams</p>
@@ -99,7 +100,9 @@
     </table>
     <hr>
     <h3>My Hobbies</h3>
-    <strong> I honestly don't know &#128517;</strong>
+    <strong> I honestly don't know &#128517;</strong> 
+    <p>A tiny part of me also wants to be a gamer but i can only play Candy crush🤣........ Looking forward to Call of Duty very soon🙊🙊</p>
+
   </div>
 
   <h3>Some random AI avatars of me</h3>
