--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h3>Coding Journey</h3>
     <p>In 2020,I started coding and learnt HTML and CSS</p>
     <p>Then i Stopped coding due to lack of interest. The zeal to continue wasn't there</p>
-    <p>JavaScript was getting to me then, NodeJS to be precise, using the Comman Prompt was somewhat  mental</p>
+    <p>JavaScript was getting to me then, NodeJS to be precise, using the Comman Prompt was somewhat  stressul back then</p>
     <p>I came back to coding on May 3rd 2022,took a Course on Python....and thankfully, i completed it on July 13th
       2022. That was my first
    breakthrough in Coding: I started a course and saw the end of it and also got my very first Certificate of
