--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h3>Coding Journey</h3>
     <p>In 2020,I started coding and learnt HTML and CSS</p>
     <p>Then i Stopped coding due to lack of interest. The zeal to continue wasn't there</p>
-    <p>JavaScript was getting to me then, NodeJS to be precise, using the Comman Prompt was somewhat  stressul back then</p>
+    <p>JavaScript was getting to me then, NodeJS to be precise, using the Command Prompt was somewhat  stressul back then</p>
     <p>I came back to coding on May 3rd 2022,took a Course on Python....and thankfully, i completed it on July 13th
       2022. That was my first
    breakthrough in Coding: I started a course and saw the end of it and also got my very first Certificate of
@@ -78,6 +78,8 @@
     <p>In 2023, I look forward to achieving some of my coding dreams</p>
 
     <p>I want to be a Tech Guru and i choose to start with Web Development</p>
+    
+    <p>Course of Study is Computer Science with a major in Web Development</p>
     <hr>
     <h1>Skills</h1>
     <table cellspacing="10">
@@ -101,7 +103,8 @@
     <hr>
     <h3>My Hobbies</h3>
     <strong> I honestly don't know &#128517;</strong> 
-    <p>A tiny part of me also wants to be a gamer but i can only play Candy crush🤣........ Looking forward to Call of Duty very soon🙊🙊</p>
+    <p>A tiny part of me wants to be a gamer but i can only play Candy crush🤣........ Looking forward to Call of Duty very soon🙊🙊</p>
+    <p>Turns out that i suck at COD mobile 😪.... Trusting the process though😌</p>
 
   </div>
 
