--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
     <hr>
     <h3>My Hobbies</h3>
     <strong> I honestly don't know &#128517;</strong> 
-    <p>A tiny part of me wants to be a gamer but i can only play Candy crush🤣........ Looking forward to Call of Duty very soon🙊🙊</p>
-    <p>Turns out that i suck at COD mobile 😪.... Trusting the process though😌</p>
+    <p>A tiny part of me wants to be a gamer but i can only play Candy crush🤣........ Looking forward to Call of Duty very soon🙊🙊 <br> Turns out that i suck at COD mobile 😪.... Trusting the process though😌</p>
 
   </div>
 
