--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
       This is my portfolio HTML & CSS project. There's no JS included so it doesn't have any functionalities<br> 
     </p>
     
-    <hr>
     <h3>Programming languages i have learnt so far</h3>
     <ul>
       <li>HTML*not a programming language* </li>
@@ -77,12 +76,10 @@
       Development Bootcamp <br>
       Fast forward to August 2023, I completed Angela Yu's Complete Web Developer Bootcamp
     </p>
-
     <p>Currently leraning React.JS</p>
 
-    <p>This year, I look forward to achieving some of my coding dreams</p>
-    <p>Course of Study is Computer Science with a major in Web Development</p>
-    <hr>
+    <p>Aside from Web Devlopment, i'd love to venture into Ethical Hacking and Cyber Security. Any of these would can be achieved with a CS degree</p>    
+    
     <h1>Skills</h1>
     <table cellspacing="10">
       <tr>
@@ -110,11 +107,11 @@
     <h3>My Hobbies</h3>
     <p>Writing(I write to clear my mind) </p>
     <p>Singing</p>
-    <p>I also enjoy creating designs on canva</p>
+    <p>I also enjoy creating designs on Canva</p>
     <p>A tiny part of me wants to be a gamer but I can only play Candy crush and Solitaire🤣........ Looking forward to Call of Duty very soon🙊🙊 <br> 
   </div>
 
-  <h3>Some random AI avatars of me</h3>
+  <h3>Some of my Canva designs</h3>
 
   <div class="container-fluid">
     <div class="row">
